# sbd

./: .gitignore  README.md
Biblioteca/: Biblioteca.db  CMakeLists.txt  CMakeLists.txt.user.865e7cc  main.cpp  materiales.json  usuarios.json
Biblioteca/Controllers/: BibliotecaFacade.cpp  BibliotecaFacade.h  MaterialController.cpp  MaterialController.h  PrestamoController.cpp  PrestamoController.h  UsuarioController.cpp  UsuarioController.h  controllerMaterial.cpp  controllerMaterial.h
Biblioteca/Iconos/: Iconos.qrc
Biblioteca/Models/: BaseDatos.cpp  BaseDatos.h  LibroDAO.cpp  LibroDAO.h  MaterialDAO.cpp  MaterialDAO.h  MaterialFactory.cpp  MaterialFactory.h  Prestamo.cpp  Prestamo.h  PrestamoController.cpp  PrestamoController.h  PrestamoDAO.cpp  PrestamoDAO.h  Repositorio.h  RevistaDAO.cpp  RevistaDAO.h  TesisDAO.cpp  TesisDAO.h  UsuarioDAO.cpp  UsuarioDAO.h  libro.cpp  libro.h  material.cpp  material.h  revista.cpp  revista.h  tesis.cpp  tesis.h  usuario.cpp  usuario.h
Biblioteca/Views/: Materiales.cpp  Materiales.h  Materiales.ui  MaterialesForm.cpp  MaterialesForm.h  MaterialesForm.ui  MaterialesView.cpp  MaterialesView.h  MaterialesView.ui  PrestamoForm.cpp  PrestamoForm.h  PrestamoForm.ui  Prestamos.cpp  Prestamos.h  Prestamos.ui  PrestamosView.cpp  PrestamosView.h  PrestamosView.ui  UsuarioForm.cpp  UsuarioForm.h  UsuarioForm.ui  Usuarios.cpp  Usuarios.h  Usuarios.ui  UsuariosView.cpp  UsuariosView.h  UsuariosView.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
